Fix contact alignment and even out spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -162,9 +162,6 @@ a:hover {
     line-height: 1.9;
 }
 
-.about p:last-of-type {
-    margin-bottom: 0;
-}
 
 .about a {
     color: var(--color-accent);
